--- a/packages/nosql/package.json
+++ b/packages/nosql/package.json
@@ -2,8 +2,8 @@
   "name": "@ignisia/nosql",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
-  "types": "./dist/index.d.ts",
-  "version": "0.2.1",
+  "types": "./dist/esm/index.d.ts",
+  "version": "0.2.2",
   "type": "module",
   "exports": {
     ".": {
@@ -65,5 +65,20 @@
   },
   "files": [
     "dist"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/krsbx/aio-web.git"
+  },
+  "bugs": {
+    "url": "https://github.com/krsbx/aio-web/issues"
+  },
+  "keywords": [
+    "bun",
+    "nosql",
+    "database",
+    "key-value",
+    "redis",
+    "mongodb"
   ]
 }
