--- a/packages/securedb/package.json
+++ b/packages/securedb/package.json
@@ -2,8 +2,8 @@
   "name": "@ignisia/securedb",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
-  "types": "./dist/index.d.ts",
-  "version": "0.1.2",
+  "types": "./dist/esm/index.d.ts",
+  "version": "0.1.3",
   "type": "module",
   "exports": {
     ".": {
@@ -55,5 +55,20 @@
   },
   "files": [
     "dist"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/krsbx/aio-web.git"
+  },
+  "bugs": {
+    "url": "https://github.com/krsbx/aio-web/issues"
+  },
+  "keywords": [
+    "bun",
+    "sql",
+    "nosql",
+    "database",
+    "encryption",
+    "decryption"
   ]
 }
