--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -2,8 +2,8 @@
   "name": "@ignisia/core",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
-  "types": "./dist/index.d.ts",
-  "version": "0.2.0",
+  "types": "./dist/esm/index.d.ts",
+  "version": "0.2.1",
   "type": "module",
   "exports": {
     ".": {
@@ -70,5 +70,21 @@
   },
   "files": [
     "dist"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/krsbx/aio-web.git"
+  },
+  "bugs": {
+    "url": "https://github.com/krsbx/aio-web/issues"
+  },
+  "keywords": [
+    "bun",
+    "http",
+    "web",
+    "rest",
+    "restful",
+    "api",
+    "router"
   ]
 }
