--- a/packages/replica/package.json
+++ b/packages/replica/package.json
@@ -9,28 +9,28 @@
     ".": {
       "types": "./dist/esm/index.d.ts",
       "import": "./dist/esm/index.js",
-      "require": "./dist/cjs/index.cjs"
+      "require": "./dist/cjs/index.js"
     },
     "./*": {
       "types": "./dist/esm/*.d.ts",
       "import": "./dist/esm/*.js",
-      "require": "./dist/cjs/*.cjs"
+      "require": "./dist/cjs/*.js"
     },
     "./**/*": {
       "types": "./dist/esm/**/*.d.ts",
       "import": "./dist/esm/**/*.js",
-      "require": "./dist/cjs/**/*.cjs"
+      "require": "./dist/cjs/**/*.js"
     },
     "./package.json": "./package.json",
     "./primary": {
       "types": "./dist/esm/primary/index.d.ts",
       "import": "./dist/esm/primary/index.js",
-      "require": "./dist/cjs/primary/index.cjs"
+      "require": "./dist/cjs/primary/index.js"
     },
     "./replica": {
       "types": "./dist/esm/replica/index.d.ts",
       "import": "./dist/esm/replica/index.js",
-      "require": "./dist/cjs/replica/index.cjs"
+      "require": "./dist/cjs/replica/index.js"
     }
   },
   "scripts": {
