--- a/packages/benchmarks/package.json
+++ b/packages/benchmarks/package.json
@@ -6,17 +6,17 @@
     "bench:web": "bun web/bench.ts"
   },
   "devDependencies": {
-    "@ignisia/core": "workspace:*",
-    "@types/autocannon": "^7.12.6",
+    "ignisia": "workspace:*",
+    "@types/autocannon": "^7.12.7",
     "@types/bun": "latest",
     "autocannon": "^8.0.0",
-    "dayjs": "^1.11.13",
-    "elysia": "^1.2.25",
-    "hono": "^4.7.5",
-    "systeminformation": "^5.25.11",
+    "dayjs": "^1.11.19",
+    "elysia": "^1.4.18",
+    "hono": "^4.10.8",
+    "systeminformation": "^5.27.13",
     "tree-kill-promise": "^3.0.14"
   },
   "peerDependencies": {
-    "typescript": "^5"
+    "typescript": "^5.8.3"
   }
 }
